refactor: refactor controller